--- a/index.html
+++ b/index.html
@@ -66,13 +66,18 @@
     <div class="content">
         <h1>瑜 · 无止境</h1>
         <h4>Yoga · Limitless</h4>
-        
+
+        <h3>域名出售中</h3>
+
+        <p>The domain name you visit is for sale!</p>
+        <br>
         <p>If you need this domain name,<br>
         please send email to me and make an offer.</p>
         
         <p>
             <a href="mailto:market@ones.yoga">sales@ones.yoga</a>
         </p>
+
     </div>
 </body>
 </html>
