Update title in index.html for domain sale

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="瑜伽的精髓在于通过身心的和谐统一，唤醒内在觉知，达到"联结"（梵文"Yuj"的本意）——即个体意识与宇宙本源的合一。">
     <meta name="keywords" content="瑜,伽,瑜伽,瑜伽哲学,哈他,阿斯汤加,阴瑜伽,昆达里尼,艾扬格,流瑜伽,热瑜伽,修复瑜伽,空中瑜伽,八支分法,制戒,内制,坐法,收束法,清洁法,瑜伽休息术,瑜伽砖,瑜伽带,瑜伽轮,拜日式战士式,树式,猫式,船式,眼镜蛇式,鸽子式,婴儿式,摊尸式">
-    <title>ones.yoga</title>
+    <title>ones.yoga| 域名出售中</title>
     <style>
         body {
             margin: 0;
