--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
         <h1>瑜 · 无止境</h1>
         <h4>Yoga · Limitless</h4>
 
-        <h3>域名出售中</h3>
+        <h3 style="color: red;">域名出售中</h3>
 
         <p>The domain name you visit is for sale!</p>
-        <br>
         <p>If you need this domain name,<br>
         please send email to me and make an offer.</p>
         
