Update domain sale message in index.html

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h4>Yoga · Limitless</h4>
 
         <h2 style="color: red;">域名出售中</h2>
-        <p>The domain name you visit is for sale!</p>
-        <p>If you need this domain name,<br>
+        <p>The domain name you visit is for sale!
+        If you need this domain name,<br>
         please send email to me and make an offer.</p>
         
         <p>
