--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
         <h4>Yoga · Limitless</h4>
 
         <h2 style="color: red;">域名出售中</h2>
-        <p>The domain name you visit is for sale!
+        <p>The domain name you visit is for sale!<br>
         If you need this domain name,<br>
         please send email to me and make an offer.</p>
-        
         <p>
             <a href="mailto:market@ones.yoga">sales@ones.yoga</a>
         </p>
