--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <h4>Yoga · Limitless</h4>
 
         <h2 style="color: red;">域名出售中</h2>
-        <p>The domain name you visit is for sale!</p>
-
         <h3 style="color: red;">如果您需要此域名，请发含报价邮件给我。</h3>
-        <p>If you need this domain name,<br>
+        
+        <p>The domain name you visit is for sale!<br>
+        If you need this domain name,<br>
         please send email to me and make an offer.</p>
         
         <p>
