--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <h1>瑜 · 无止境</h1>
         <h4>Yoga · Limitless</h4>
 
-        <h2 style="color: red;">域名出售中</h2>
-        <h3 style="color: red;">如果您需要此域名，请发含报价邮件给我。</h3>
+        <h3 style="color: red;">域名出售中<br>
+        如果您需要此域名，请发含报价邮件给我。</h3>
         
         <p>The domain name you visit is for sale!<br>
         If you need this domain name,<br>
